--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon server.js --ignore public",
+    "start": "node server.js --ignore public",
     "dev": "webpack -w"
   },
   "keywords": [],
